--- a/app/ui/dashboard/footer/footer.module.css
+++ b/app/ui/dashboard/footer/footer.module.css
@@ -1,1 +1,14 @@
-.container
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 30px;
+    color: var(--textSoft);
+}
+
+.logo{
+    font-weight: bold;
+}
+.text{  
+    font-size: 12px;
+}
